// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Table.Col className="my-classname" 1`] = `
<col
  className="uu5-bricks-table-col my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col className="test-classname" 1`] = `
<col
  className="uu5-bricks-table-col test-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema="brown" 1`] = `
<col
  className="color-schema-brown uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema="brown-rich" 1`] = `
<col
  className="color-schema-brown-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema="cyan" 1`] = `
<col
  className="color-schema-cyan uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema="cyan-rich" 1`] = `
<col
  className="color-schema-cyan-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema="default" 1`] = `
<col
  className="color-schema-default uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema="green" 1`] = `
<col
  className="color-schema-green uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema="green-rich" 1`] = `
<col
  className="color-schema-green-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema="grey" 1`] = `
<col
  className="color-schema-grey uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema="grey-rich" 1`] = `
<col
  className="color-schema-grey-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema="orange" 1`] = `
<col
  className="color-schema-orange uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema="orange-rich" 1`] = `
<col
  className="color-schema-orange-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema="pink" 1`] = `
<col
  className="color-schema-pink uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema="pink-rich" 1`] = `
<col
  className="color-schema-pink-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema="purple" 1`] = `
<col
  className="color-schema-purple uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema="purple-rich" 1`] = `
<col
  className="color-schema-purple-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema="red" 1`] = `
<col
  className="color-schema-red uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema="red-rich" 1`] = `
<col
  className="color-schema-red-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema="yellow" 1`] = `
<col
  className="color-schema-yellow uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col colorSchema="yellow-rich" 1`] = `
<col
  className="color-schema-yellow-rich uu5-bricks-table-col uu5-common-bg"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col controlled=false 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col controlled=true 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col default props 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col disabled=false 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col disabled=false 3`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col disabled=true 1`] = `
<col
  className="uu5-bricks-table-col uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col disabled=true 3`] = `
<col
  className="uu5-bricks-table-col uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col docKit examples UU5.Bricks.Table.Col should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Table
    header="Table"
    id="uuID"
    key="uuID"
  >
    <table-col-group
      id="uuID02"
    >
      <TableCol
        colorSchema="blue"
        id="uuID03"
        span={1}
      />
      <TableCol
        colorSchema="red"
        id="uuID04"
        span={2}
      />
    </table-col-group>
    <table-thead
      id="uuID05"
    >
      <table-tr
        id="uuID06"
      >
        <table-th
          content="Name"
          id="uuID07"
        />
        <table-th
          content="Rank"
          id="uuID08"
        />
        <table-th
          content="Promotion prospects"
          id="uuID09"
        />
      </table-tr>
    </table-thead>
    <table-tbody
      id="uuID010"
    >
      <table-tr
        id="uuID011"
      >
        <table-td
          content="Rimmer"
          id="uuID012"
        />
        <table-td
          content="2nd class technician"
          id="uuID013"
        />
        <table-td
          content="comical"
          id="uuID014"
        />
      </table-tr>
    </table-tbody>
  </Table>
</div>
`;

exports[`UU5.Bricks.Table.Col elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col fullTextSearchPriority=0 1`] = `
<col
  className="uu5-bricks-table-col uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col fullTextSearchPriority=0 2`] = `
<col
  className="uu5-bricks-table-col uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col hidden=false 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col hidden=false 3`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col hidden=true 1`] = `
<col
  className="uu5-bricks-table-col uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col hidden=true 3`] = `
<col
  className="uu5-bricks-table-col uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col id="myId" 1`] = `
<col
  className="uu5-bricks-table-col"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col id="test-id" 1`] = `
<col
  className="uu5-bricks-table-col"
  id="test-id"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col mainAttrs=undefined 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col name="myName" 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel="bigBox" 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel="bigBoxCollection" 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel="box" 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel="box" 3`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel="boxCollection" 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Table.Col nestingLevel="inline" 3`] = `""`;

exports[`UU5.Bricks.Table.Col nestingLevel="page" 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel="smallBox" 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel="smallBoxCollection" 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col nestingLevel="spa" 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col noPrint=false 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col noPrint=true 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col pureRender=false 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col pureRender=true 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col selected=false 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col selected=true 1`] = `
<col
  className="uu5-bricks-table-col uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col span=1 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  span={1}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col span=2 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  span={2}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col style="padding:8px; borderRadius: 2px" 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col style={"backgroundColor":"red","color":"blue"} 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col style={"margin":8} 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Col tooltip="My Tooltip" 1`] = `
<col
  className="uu5-bricks-table-col"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
